--- a/src/styles/components/dev/_header.scss
+++ b/src/styles/components/dev/_header.scss
@@ -49,7 +49,8 @@
   width: 100%;
   height: 100%;
   @include media-breakpoint-up(md) {
-    width: calc(100% - (calc(1px + 0.5vw) + calc(40px + 5vw)) - 25px);
+    width: calc(100% - (calc(40px + 5vw)) - 25px);
+    margin-left: 4px;
   }
 }
 .header-dev-container {
