--- a/src/styles/components/dev/_homes.scss
+++ b/src/styles/components/dev/_homes.scss
@@ -33,9 +33,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 250px;
 }
 .homes-dev-letf-content {
-  position: absolute;
   z-index: 1;
   color: #795b81;
   text-align: center;
@@ -63,4 +64,9 @@
     left: 30px;
     right: 30px;
   }
+}
+
+.homes-dev-canvas {
+  position: absolute;
+  left: 0;
 }
