--- a/src/styles/components/dev/_service.scss
+++ b/src/styles/components/dev/_service.scss
@@ -1,3 +1,8 @@
 .service-dev {
   min-height: 100vh;
+  background-color: #fbb859;
+  margin-top: 60px;
+  @include media-breakpoint-up(md) {
+    margin-top: 0;
+  }
 }
