--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,4 +5,5 @@
 @import "~@fortawesome/fontawesome-free/scss/regular";
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/v4-shims";
+@import "~devices.css/src/devices";
 @import "components/components";
