--- a/src/styles/components/dev/_portofolio.scss
+++ b/src/styles/components/dev/_portofolio.scss
@@ -10,13 +10,13 @@
   width: 100%;
   height: 100%;
 }
-.homes-dev-content {
+.portofolio-dev-content {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
   @include media-breakpoint-up(md) {
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: center;
   }
 }
@@ -25,7 +25,59 @@
   font-size: 3rem;
   color: #795b81;
   margin-bottom: 0;
+  z-index: 1;
 }
 .portofolio-dev-bg-top {
   margin-bottom: 30px;
 }
+.portofolio-dev-right {
+  display: flex;
+  justify-content: center;
+}
+.portofolio-dev-right-content {
+  position: relative;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.portofolio-dev-frame {
+  position: relative;
+  margin-bottom: 30px;
+  //width: 100%;
+}
+.portofolio-dev-desc {
+  width: 100%;
+}
+.portofolio-dev-laptop {
+  width: 320px;
+  @include media-breakpoint-up(sm) {
+    width: 600px;
+  }
+}
+.portofolio-dev-phone {
+  position: absolute;
+  width: 58px;
+  right: 26px;
+  top: 85px;
+  @include media-breakpoint-up(sm) {
+    width: 112px;
+    right: 42px;
+    top: 162px;
+  }
+}
+.portofolio-dev-desc {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 2.5rem;
+  text-align: center;
+  width: 100%;
+  @include media-breakpoint-up(lg) {
+    width: 80%;
+  }
+}
+.portofolio-dev-left {
+  display: flex;
+  justify-content: center;
+}
+
