--- a/src/styles/components/dev/_portofolio.scss
+++ b/src/styles/components/dev/_portofolio.scss
@@ -79,5 +79,29 @@
 .portofolio-dev-left {
   display: flex;
   justify-content: center;
+  padding: {
+    top: 30px;
+    bottom: 30px;
+  }
+  @include media-breakpoint-up(md) {
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0;
+  }
 }
-
+.portofolio-dev-preview {
+  width: 200px;
+  height: 150px;
+  background-color: black;
+  margin-right: 20px;
+  @include media-breakpoint-up(md) {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  &:last-child {
+    margin-right: 0;
+    @include media-breakpoint-up(md) {
+      margin-bottom: 0;
+    }
+  }
+}
