--- a/src/styles/components/dev/_header.scss
+++ b/src/styles/components/dev/_header.scss
@@ -102,7 +102,7 @@
   @include transition(transform .15s, box-shadow .15s);
   &.scroll {
     @include media-breakpoint-up(md) {
-      box-shadow: 10px 10px 0 0 #795b81;
+      //box-shadow: 10px 10px 0 0 #795b81;
     }
   }
   @include media-breakpoint-up(md) {
