--- a/src/styles/components/form/_input.scss
+++ b/src/styles/components/form/_input.scss
@@ -5,6 +5,14 @@
     bottom: 1.5rem;
   }
 
+  &.form-error {
+    .form-control,
+    .form-control:focus {
+      box-shadow: 0 1px 0 0 #fbb859;
+      border-bottom-color: #fbb859;
+    }
+  }
+
   .form-control {
     background-color: transparent;
     border: 0;
