--- a/src/styles/components/dev/_header.scss
+++ b/src/styles/components/dev/_header.scss
@@ -34,16 +34,18 @@
 }
 .header-dev-logo-title {
   font-family: 'SteelFish', sans-serif;
+  font-size: $h5-font-size;
   line-height: 1;
   @include media-breakpoint-up(md) {
-    font-size: $h5-font-size;
-  }
-  @include media-breakpoint-up(lg) {
-    font-size: $h1-font-size;
+    font-size: $h3-font-size;
   }
 }
 .header-dev-logo-subs {
   font-family: 'Roboto', sans-serif;
+  font-size: .7rem;
+  @include media-breakpoint-up(md) {
+    font-size: 1rem;
+  }
 }
 .header-dev-content {
   width: 100%;
@@ -56,15 +58,12 @@
 .header-dev-container {
   position: relative;
   display: flex;
-  background-color: transparent;
-  @include media-breakpoint-up(md) {
-    background-color: #fff;
-  }
+  background-color: #fff;
 }
 .header-dev-toggle {
   margin-left: auto;
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   background-color: transparent;
   border: 0;
   &.active {
